seaqt/QtWidgets/gen_qplaintextedit.h

class QMenu;
class QMetaObject;
class QPlainTextEdit;
class QPoint;
class QRect;
class QRegularExpression;
class QTextCharFormat;
class QTextCursor;
class QTextDocument;
class QUrl;
class QVariant;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMenu QMenu;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QPlainTextDocumentLayout QPlainTextDocumentLayout;
typedef struct QPlainTextEdit QPlainTextEdit;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegularExpression QRegularExpression;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QPlainTextDocumentLayout_override_virtual_childEvent(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_childEvent(void* self, QChildEvent* event);
bool QPlainTextDocumentLayout_override_virtual_customEvent(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_customEvent(void* self, QEvent* event);
bool QPlainTextDocumentLayout_override_virtual_connectNotify(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QPlainTextDocumentLayout_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QPlainTextDocumentLayout_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QPlainTextDocumentLayout_staticMetaObject();
void QPlainTextDocumentLayout_delete(QPlainTextDocumentLayout* self);