seaqt/QtWidgets/gen_qplaintextedit.nim

proc fQPlainTextDocumentLayout_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_childEvent".}
proc fcQPlainTextDocumentLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_childEvent".}
proc fQPlainTextDocumentLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_customEvent".}
proc fcQPlainTextDocumentLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_customEvent".}
proc fQPlainTextDocumentLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_connectNotify".}
proc fcQPlainTextDocumentLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_connectNotify".}
proc fQPlainTextDocumentLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QPlainTextDocumentLayout_virtualbase_disconnectNotify".}
proc fcQPlainTextDocumentLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QPlainTextDocumentLayout_override_virtual_disconnectNotify".}
proc fcQPlainTextDocumentLayout_staticMetaObject(): pointer {.importc: "QPlainTextDocumentLayout_staticMetaObject".}
proc fcQPlainTextDocumentLayout_delete(self: pointer) {.importc: "QPlainTextDocumentLayout_delete".}


func init*(T: type gen_qplaintextedit_types.QPlainTextEdit, h: ptr cQPlainTextEdit): gen_qplaintextedit_types.QPlainTextEdit =
  T(h: h)
proc create*(T: type gen_qplaintextedit_types.QPlainTextEdit, parent: gen_qwidget_types.QWidget): gen_qplaintextedit_types.QPlainTextEdit =
  gen_qplaintextedit_types.QPlainTextEdit.init(fcQPlainTextEdit_new(parent.h))

proc create*(T: type gen_qplaintextedit_types.QPlainTextEdit, ): gen_qplaintextedit_types.QPlainTextEdit =
  gen_qplaintextedit_types.QPlainTextEdit.init(fcQPlainTextEdit_new2())

proc create*(T: type gen_qplaintextedit_types.QPlainTextEdit, text: string): gen_qplaintextedit_types.QPlainTextEdit =
  gen_qplaintextedit_types.QPlainTextEdit.init(fcQPlainTextEdit_new3(struct_miqt_string(data: text, len: csize_t(len(text)))))

proc create*(T: type gen_qplaintextedit_types.QPlainTextEdit, text: string, parent: gen_qwidget_types.QWidget): gen_qplaintextedit_types.QPlainTextEdit =
  gen_qplaintextedit_types.QPlainTextEdit.init(fcQPlainTextEdit_new4(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))

proc metaObject*(self: gen_qplaintextedit_types.QPlainTextEdit, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQPlainTextEdit_metaObject(self.h))

proc metacast*(self: gen_qplaintextedit_types.QPlainTextEdit, param1: cstring): pointer =
  fcQPlainTextEdit_metacast(self.h, param1)

proc metacall*(self: gen_qplaintextedit_types.QPlainTextEdit, param1: cint, param2: cint, param3: pointer): cint =
  fcQPlainTextEdit_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qplaintextedit_types.QPlainTextEdit, s: cstring): string =
  let v_ms = fcQPlainTextEdit_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setDocument*(self: gen_qplaintextedit_types.QPlainTextEdit, document: gen_qtextdocument_types.QTextDocument): void =
  fcQPlainTextEdit_setDocument(self.h, document.h)

proc document*(self: gen_qplaintextedit_types.QPlainTextEdit, ): gen_qtextdocument_types.QTextDocument =
  gen_qtextdocument_types.QTextDocument(h: fcQPlainTextEdit_document(self.h))

proc setPlaceholderText*(self: gen_qplaintextedit_types.QPlainTextEdit, placeholderText: string): void =
  fcQPlainTextEdit_setPlaceholderText(self.h, struct_miqt_string(data: placeholderText, len: csize_t(len(placeholderText))))

proc placeholderText*(self: gen_qplaintextedit_types.QPlainTextEdit, ): string =
  let v_ms = fcQPlainTextEdit_placeholderText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTextCursor*(self: gen_qplaintextedit_types.QPlainTextEdit, cursor: gen_qtextcursor_types.QTextCursor): void =
  fcQPlainTextEdit_setTextCursor(self.h, cursor.h)

proc textCursor*(self: gen_qplaintextedit_types.QPlainTextEdit, ): gen_qtextcursor_types.QTextCursor =
  gen_qtextcursor_types.QTextCursor(h: fcQPlainTextEdit_textCursor(self.h))

proc isReadOnly*(self: gen_qplaintextedit_types.QPlainTextEdit, ): bool =
  fcQPlainTextEdit_isReadOnly(self.h)

proc setReadOnly*(self: gen_qplaintextedit_types.QPlainTextEdit, ro: bool): void =
  fcQPlainTextEdit_setReadOnly(self.h, ro)

proc setTextInteractionFlags*(self: gen_qplaintextedit_types.QPlainTextEdit, flags: cint): void =
  fcQPlainTextEdit_setTextInteractionFlags(self.h, cint(flags))

proc textInteractionFlags*(self: gen_qplaintextedit_types.QPlainTextEdit, ): cint =
  cint(fcQPlainTextEdit_textInteractionFlags(self.h))

proc mergeCurrentCharFormat*(self: gen_qplaintextedit_types.QPlainTextEdit, modifier: gen_qtextformat_types.QTextCharFormat): void =
  fcQPlainTextEdit_mergeCurrentCharFormat(self.h, modifier.h)

proc setCurrentCharFormat*(self: gen_qplaintextedit_types.QPlainTextEdit, format: gen_qtextformat_types.QTextCharFormat): void =
  fcQPlainTextEdit_setCurrentCharFormat(self.h, format.h)

proc currentCharFormat*(self: gen_qplaintextedit_types.QPlainTextEdit, ): gen_qtextformat_types.QTextCharFormat =
  gen_qtextformat_types.QTextCharFormat(h: fcQPlainTextEdit_currentCharFormat(self.h))

proc tabChangesFocus*(self: gen_qplaintextedit_types.QPlainTextEdit, ): bool =
  fcQPlainTextEdit_tabChangesFocus(self.h)

proc setTabChangesFocus*(self: gen_qplaintextedit_types.QPlainTextEdit, b: bool): void =
  fcQPlainTextEdit_setTabChangesFocus(self.h, b)

proc setDocumentTitle*(self: gen_qplaintextedit_types.QPlainTextEdit, title: string): void =
  fcQPlainTextEdit_setDocumentTitle(self.h, struct_miqt_string(data: title, len: csize_t(len(title))))

proc documentTitle*(self: gen_qplaintextedit_types.QPlainTextEdit, ): string =
  let v_ms = fcQPlainTextEdit_documentTitle(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isUndoRedoEnabled*(self: gen_qplaintextedit_types.QPlainTextEdit, ): bool =
  fcQPlainTextEdit_isUndoRedoEnabled(self.h)

proc setUndoRedoEnabled*(self: gen_qplaintextedit_types.QPlainTextEdit, enable: bool): void =
  fcQPlainTextEdit_setUndoRedoEnabled(self.h, enable)

proc setMaximumBlockCount*(self: gen_qplaintextedit_types.QPlainTextEdit, maximum: cint): void =
  fcQPlainTextEdit_setMaximumBlockCount(self.h, maximum)

proc maximumBlockCount*(self: gen_qplaintextedit_types.QPlainTextEdit, ): cint =
  fcQPlainTextEdit_maximumBlockCount(self.h)

proc lineWrapMode*(self: gen_qplaintextedit_types.QPlainTextEdit, ): cint =
  cint(fcQPlainTextEdit_lineWrapMode(self.h))

proc setLineWrapMode*(self: gen_qplaintextedit_types.QPlainTextEdit, mode: cint): void =
  fcQPlainTextEdit_setLineWrapMode(self.h, cint(mode))

proc wordWrapMode*(self: gen_qplaintextedit_types.QPlainTextEdit, ): cint =
  cint(fcQPlainTextEdit_wordWrapMode(self.h))

proc setWordWrapMode*(self: gen_qplaintextedit_types.QPlainTextEdit, policy: cint): void =
  fcQPlainTextEdit_setWordWrapMode(self.h, cint(policy))

proc setBackgroundVisible*(self: gen_qplaintextedit_types.QPlainTextEdit, visible: bool): void =
  fcQPlainTextEdit_setBackgroundVisible(self.h, visible)

proc backgroundVisible*(self: gen_qplaintextedit_types.QPlainTextEdit, ): bool =
  fcQPlainTextEdit_backgroundVisible(self.h)

proc setCenterOnScroll*(self: gen_qplaintextedit_types.QPlainTextEdit, enabled: bool): void =
  fcQPlainTextEdit_setCenterOnScroll(self.h, enabled)

proc centerOnScroll*(self: gen_qplaintextedit_types.QPlainTextEdit, ): bool =
  fcQPlainTextEdit_centerOnScroll(self.h)

proc find*(self: gen_qplaintextedit_types.QPlainTextEdit, exp: string): bool =
  fcQPlainTextEdit_find(self.h, struct_miqt_string(data: exp, len: csize_t(len(exp))))

proc find*(self: gen_qplaintextedit_types.QPlainTextEdit, exp: gen_qregularexpression_types.QRegularExpression): bool =
  fcQPlainTextEdit_findWithExp(self.h, exp.h)

proc toPlainText*(self: gen_qplaintextedit_types.QPlainTextEdit, ): string =
  let v_ms = fcQPlainTextEdit_toPlainText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc ensureCursorVisible*(self: gen_qplaintextedit_types.QPlainTextEdit, ): void =
  fcQPlainTextEdit_ensureCursorVisible(self.h)

proc loadResource*(self: gen_qplaintextedit_types.QPlainTextEdit, typeVal: cint, name: gen_qurl_types.QUrl): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQPlainTextEdit_loadResource(self.h, typeVal, name.h))

proc createStandardContextMenu*(self: gen_qplaintextedit_types.QPlainTextEdit, ): gen_qmenu_types.QMenu =
  gen_qmenu_types.QMenu(h: fcQPlainTextEdit_createStandardContextMenu(self.h))

proc createStandardContextMenu*(self: gen_qplaintextedit_types.QPlainTextEdit, position: gen_qpoint_types.QPoint): gen_qmenu_types.QMenu =
  gen_qmenu_types.QMenu(h: fcQPlainTextEdit_createStandardContextMenuWithPosition(self.h, position.h))

proc cursorForPosition*(self: gen_qplaintextedit_types.QPlainTextEdit, pos: gen_qpoint_types.QPoint): gen_qtextcursor_types.QTextCursor =
  gen_qtextcursor_types.QTextCursor(h: fcQPlainTextEdit_cursorForPosition(self.h, pos.h))

proc cursorRect*(self: gen_qplaintextedit_types.QPlainTextEdit, cursor: gen_qtextcursor_types.QTextCursor): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQPlainTextEdit_cursorRect(self.h, cursor.h))

proc cursorRect*(self: gen_qplaintextedit_types.QPlainTextEdit, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQPlainTextEdit_cursorRect2(self.h))

proc anchorAt*(self: gen_qplaintextedit_types.QPlainTextEdit, pos: gen_qpoint_types.QPoint): string =
  let v_ms = fcQPlainTextEdit_anchorAt(self.h, pos.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc overwriteMode*(self: gen_qplaintextedit_types.QPlainTextEdit, ): bool =
  fcQPlainTextEdit_overwriteMode(self.h)

proc setOverwriteMode*(self: gen_qplaintextedit_types.QPlainTextEdit, overwrite: bool): void =
  fcQPlainTextEdit_setOverwriteMode(self.h, overwrite)

proc tabStopDistance*(self: gen_qplaintextedit_types.QPlainTextEdit, ): float64 =
  fcQPlainTextEdit_tabStopDistance(self.h)

proc setTabStopDistance*(self: gen_qplaintextedit_types.QPlainTextEdit, distance: float64): void =
  fcQPlainTextEdit_setTabStopDistance(self.h, distance)

proc cursorWidth*(self: gen_qplaintextedit_types.QPlainTextEdit, ): cint =
  fcQPlainTextEdit_cursorWidth(self.h)

proc setCursorWidth*(self: gen_qplaintextedit_types.QPlainTextEdit, width: cint): void =
  fcQPlainTextEdit_setCursorWidth(self.h, width)

proc setExtraSelections*(self: gen_qplaintextedit_types.QPlainTextEdit, selections: seq[gen_qtextedit_types.QTextEditExtraSelection]): void =
  var selections_CArray = newSeq[pointer](len(selections))
  for i in 0..<len(selections):
    selections_CArray[i] = selections[i].h

  fcQPlainTextEdit_setExtraSelections(self.h, struct_miqt_array(len: csize_t(len(selections)), data: if len(selections) == 0: nil else: addr(selections_CArray[0])))

proc extraSelections*(self: gen_qplaintextedit_types.QPlainTextEdit, ): seq[gen_qtextedit_types.QTextEditExtraSelection] =
  var v_ma = fcQPlainTextEdit_extraSelections(self.h)
  var vx_ret = newSeq[gen_qtextedit_types.QTextEditExtraSelection](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qtextedit_types.QTextEditExtraSelection(h: v_outCast[i])
  vx_ret

proc moveCursor*(self: gen_qplaintextedit_types.QPlainTextEdit, operation: cint): void =
  fcQPlainTextEdit_moveCursor(self.h, cint(operation))
